<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/coins"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_coin"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRemoveCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/remove_coins"
        app:icon="@android:drawable/ic_delete"
        app:layout_constraintStart_toEndOf="@+id/btnAddCoin"
        app:layout_constraintTop_toTopOf="@+id/btnAddCoin" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbarTitle"
        app:layout_constraintStart_toStartOf="@+id/toolbarTitle"
        app:layout_constraintTop_toBottomOf="@+id/btnAddCoin">

        <com.google.android.material.chip.Chip
            android:id="@+id/highlight_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:text="@string/highlight_movers"
            app:chipBackgroundColor="@color/chip_background_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/show_all_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="20dp"
            android:paddingHorizontal="16dp"
            android:text="@string/show_all"
            app:chipBackgroundColor="@color/chip_background_color" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controls_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
